# SniperSDK

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_main.cpp
include/: baseinfo.h  export_api_sniper_sdk.h  sniper_sdk.h  sniper_sdk_api.h
include/util/: datehelper.h  filehelper.h  util.h
src/: baseinfo.cpp  export_api_sniper_sdk.cpp  main.cpp  sniper_sdk.cpp  sniper_sdk_api.cpp
src/util/: datehelper.cpp  filehelper.cpp  util.cpp
